# trim-ps2

./: LICENSE  README.md  setup.cfg  setup.py
src/trim_ps2/: __init__.py  __main__.py  main.py
