[metadata]
name = trim-ps2
version = file: src/trim_ps2/VERSION
url = https://github.com/remico/trim-ps2
project_urls =
    Source = https://github.com/remico/trim-ps2
author = Roman Gladyshev
author_email = remicollab@gmail.com
maintainer = Roman Gladyshev
maintainer_email = remicollab@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = New BSD
license_file = LICENSE
description = Tool for removing unused PySide2 libraries from AppImage distributions created with Briefcase.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    app
    packaging
    linux
platforms = ['POSIX']

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8

[options.package_data]
* = VERSION

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    trim-ps2 = trim_ps2.__main__:main
